# usaii-hackathon-disastercast-diss

./: .gitignore  README.md  build_data.py  pyproject.toml  requirements.txt
data/houston/flood/: damage_by_zone.csv  events.csv  infrastructure_capacity.csv  population_growth.csv
data/los_angeles/wildfire/: damage_by_neighborhood.csv  events.csv  infrastructure_capacity.csv  population_growth.csv
data/policy/: interventions_db.csv
frontend/src/app/dashboard/: page.tsx
frontend/src/app/interventions/: page.tsx
utils/: ai_engine.py  data_loader.py  pattern_inference.py
